// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction router > 'getByHash' > should fail when providing a non-existent hash > [TRPCError: No transaction with hash 'nonExistingHash' found] 1`] = `[TRPCError: No transaction with hash 'nonExistingHash'.]`;

exports[`Transaction router > 'getByHash' > should get a transaction by hash correctly 1`] = `
{
  "blobAsCalldataGasUsed": "1000",
  "blobGasBaseFee": "8650752",
  "blobGasMaxFee": "39321600",
  "blobGasPrice": "22",
  "blobGasUsed": "393216",
  "blobs": [
    {
      "versionedHash": "blobHash001",
    },
    {
      "versionedHash": "blobHash002",
    },
    {
      "versionedHash": "blobHash003",
    },
  ],
  "blockHash": "blockHash001",
  "blockNumber": 1001,
  "from": "address1",
  "hash": "txHash001",
  "maxFeePerBlobGas": "100",
  "rollup": null,
  "timestamp": "2022-10-16T12:00:00.000Z",
  "to": "address2",
  "totalBlobSize": 3300,
}
`;

exports[`Transaction router > 'getByHashFull' > should fail when providing a non-existent hash > [TRPCError: No transaction with hash 'nonExistingHash' found] 1`] = `[TRPCError: No transaction with hash 'nonExistingHash'.]`;

exports[`Transaction router > 'getByHashFull' > should get a transaction by hash correctly 1`] = `
{
  "blobAsCalldataGasUsed": "1000",
  "blobGasBaseFee": "8650752",
  "blobGasMaxFee": "39321600",
  "blobGasUsed": "393216",
  "blobs": [
    {
      "blob": {
        "commitment": "commitment001",
        "proof": "proof001",
        "size": 1000,
      },
      "blobHash": "blobHash001",
      "index": 0,
    },
    {
      "blob": {
        "commitment": "commitment002",
        "proof": "proof002",
        "size": 1100,
      },
      "blobHash": "blobHash002",
      "index": 1,
    },
    {
      "blob": {
        "commitment": "commitment003",
        "proof": "proof003",
        "size": 1200,
      },
      "blobHash": "blobHash003",
      "index": 2,
    },
  ],
  "block": {
    "blobGasPrice": "22",
    "excessBlobGas": "15000",
    "number": 1001,
    "timestamp": 1665921600,
  },
  "blockHash": "blockHash001",
  "fromId": "address1",
  "gasPrice": "10",
  "hash": "txHash001",
  "maxFeePerBlobGas": "100",
  "rollup": null,
  "toId": "address2",
  "totalBlobSize": 3300,
}
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the latest results when no sort was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash008",
    "blockNumber": 1008,
    "from": "address2",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "blockHash": "blockHash007",
    "blockNumber": 1007,
    "from": "address5",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-31T14:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3900,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
      },
    ],
    "blockHash": "blockHash006",
    "blockNumber": 1006,
    "from": "address5",
    "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-31T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 1500,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the oldest results when ascending order is specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address1",
    "hash": "txHash001",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address2",
    "totalBlobSize": 3300,
  },
  {
    "blobAsCalldataGasUsed": "1100",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "14417920",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address3",
    "hash": "txHash002",
    "maxFeePerBlobGas": "110",
    "rollup": null,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1200",
    "blobGasBaseFee": "5767168",
    "blobGasMaxFee": "31457280",
    "blobGasPrice": "22",
    "blobGasUsed": "262144",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address5",
    "hash": "txHash003",
    "maxFeePerBlobGas": "120",
    "rollup": "optimism",
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 2100,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the block range specified  1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2621440",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "20",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "from": "address5",
    "hash": "txHash013",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-28T10:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "20",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "from": "address2",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-28T10:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash005",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address2",
    "hash": "txHash011",
    "maxFeePerBlobGas": "100",
    "rollup": "base",
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1400,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash003",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address3",
    "hash": "txHash010",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1200,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash003",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address5",
    "hash": "txHash009",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 1200,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash002",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address5",
    "hash": "txHash008",
    "maxFeePerBlobGas": "100",
    "rollup": "arbitrum",
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 1100,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address1",
    "hash": "txHash007",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address2",
    "totalBlobSize": 1000,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results corresponding to the rollup specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "blockHash": "blockHash007",
    "blockNumber": 1007,
    "from": "address5",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-31T14:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3900,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "20",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "from": "address2",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-28T10:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address1",
    "hash": "txHash007",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address2",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1200",
    "blobGasBaseFee": "5767168",
    "blobGasMaxFee": "31457280",
    "blobGasPrice": "22",
    "blobGasUsed": "262144",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address5",
    "hash": "txHash003",
    "maxFeePerBlobGas": "120",
    "rollup": "optimism",
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 2100,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results ending at the block specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1200",
    "blobGasBaseFee": "5767168",
    "blobGasMaxFee": "31457280",
    "blobGasPrice": "22",
    "blobGasUsed": "262144",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address5",
    "hash": "txHash003",
    "maxFeePerBlobGas": "120",
    "rollup": "optimism",
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 2100,
  },
  {
    "blobAsCalldataGasUsed": "1100",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "14417920",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address3",
    "hash": "txHash002",
    "maxFeePerBlobGas": "110",
    "rollup": null,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address1",
    "hash": "txHash001",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address2",
    "totalBlobSize": 3300,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results ending at the slot specified without including it 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1200",
    "blobGasBaseFee": "5767168",
    "blobGasMaxFee": "31457280",
    "blobGasPrice": "22",
    "blobGasUsed": "262144",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address5",
    "hash": "txHash003",
    "maxFeePerBlobGas": "120",
    "rollup": "optimism",
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address6",
    "totalBlobSize": 2100,
  },
  {
    "blobAsCalldataGasUsed": "1100",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "14417920",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address3",
    "hash": "txHash002",
    "maxFeePerBlobGas": "110",
    "rollup": null,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash002",
      },
      {
        "versionedHash": "blobHash003",
      },
    ],
    "blockHash": "blockHash001",
    "blockNumber": 1001,
    "from": "address1",
    "hash": "txHash001",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2022-10-16T12:00:00.000Z",
    "to": "address2",
    "totalBlobSize": 3300,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results starting from the block specificed 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash008",
    "blockNumber": 1008,
    "from": "address2",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "blockHash": "blockHash007",
    "blockNumber": 1007,
    "from": "address5",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-31T14:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > getAll > when getting filtered transaction results > should return the results starting from the slot specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash008",
    "blockNumber": 1008,
    "from": "address2",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "blockHash": "blockHash007",
    "blockNumber": 1007,
    "from": "address5",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-31T14:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > getAll > when getting paginated transaction results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash008",
    "blockNumber": 1008,
    "from": "address2",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "timestamp": "2023-08-31T16:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "22",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
      {
        "versionedHash": "blobHash004",
      },
    ],
    "blockHash": "blockHash007",
    "blockNumber": 1007,
    "from": "address5",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-31T14:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > getAll > when getting paginated transaction results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasPrice": "20",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
      {
        "versionedHash": "blobHash001",
      },
    ],
    "blockHash": "blockHash005",
    "blockNumber": 1005,
    "from": "address2",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "rollup": "optimism",
    "timestamp": "2023-08-28T10:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 3000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasPrice": "22",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "versionedHash": "blobHash005",
      },
    ],
    "blockHash": "blockHash004",
    "blockNumber": 1004,
    "from": "address2",
    "hash": "txHash011",
    "maxFeePerBlobGas": "100",
    "rollup": "base",
    "timestamp": "2023-08-20T12:00:00.000Z",
    "to": "address4",
    "totalBlobSize": 1400,
  },
]
`;

exports[`Transaction router > getByAddress > when getting paginated address's transactions results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "20",
      "excessBlobGas": "10000",
      "number": 1005,
      "timestamp": 1693216800,
    },
    "blockHash": "blockHash005",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "rollup": "OPTIMISM",
    "toId": "address4",
    "totalBlobSize": 3000,
  },
]
`;

exports[`Transaction router > getByAddress > when getting paginated address's transactions results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment002",
          "proof": "proof002",
          "size": 1100,
        },
        "blobHash": "blobHash002",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment002",
          "proof": "proof002",
          "size": 1100,
        },
        "blobHash": "blobHash002",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1003,
      "timestamp": 1691064000,
    },
    "blockHash": "blockHash003",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash005",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 3200,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "proof": "proof001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1003,
      "timestamp": 1691064000,
    },
    "blockHash": "blockHash003",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash006",
    "maxFeePerBlobGas": "100",
    "rollup": null,
    "toId": "address4",
    "totalBlobSize": 3000,
  },
]
`;
